# prot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  axel.md  operation.md  pyproject.toml
.claude/rules/: voice-architecture.md
.serena/: project.yml
.serena/memories/: architecture.md  build-and-test.md  conventions.md  current-work.md  known-issues.md
data/: axel.json  axel.xml
data/conversations/: 2026-02-17-062095ee.json  2026-02-17-9be2c887.json  2026-02-17-b184db26.json  2026-02-17-bf7167a9.json  2026-02-17-ca2a77db.json  2026-02-17-cb01eefc.json  2026-02-17-ed7e4ce4.json  2026-02-17-f4b315c5.json  2026-02-17-f9dc3d46.json  2026-02-17-fb27db0a.json  2026-02-17-fe350d9a.json  2026-02-17-ff02c635.json
deploy/: prot.service
docs/: 2026-02-15-voice-architecture-design.md  2026-02-15-voice-architecture-impl.md  axel.json
scripts/: db_gc.py  run.sh
src/prot/: app.py  (+26 more)
tests/: conftest.py  test_app.py  test_audio.py  test_community.py  test_context.py  test_conversation_log.py  test_db.py  test_db_export.py  test_db_gc.py  test_decay.py  test_embeddings.py  test_engine.py  test_graphrag.py  test_hass.py  test_integration_chat.py  test_integration_text.py  test_llm.py  test_logger.py  test_logging_compat.py  test_logging_constants.py  test_logging_decorator.py  test_logging_formatters.py  test_logging_handlers.py  test_logging_setup.py  test_logging_structured.py  test_logging_tracing.py  test_memory.py  test_pipeline.py  test_playback.py  test_processing.py  test_reranker.py  test_state.py  test_stt.py  test_trimmer.py  test_tts.py  test_vad.py
(+37 files in other folders)
