[project]
name = "prot"
version = "0.1.0"
description = "Real-time voice conversation system with Axel persona"
readme = "README.md"
authors = [
    { name = "Jongmin Lee", email = "cyan@northprot.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "anthropic>=0.52",
    "elevenlabs>=1.0",
    "deepgram-sdk>=4.0",
    "pyaudio>=0.2.14",
    "silero-vad>=5.1",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "asyncpg>=0.30",
    "voyageai>=0.3",
    "numpy>=2.0",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests requiring real API keys (deselect with '-m \"not integration\"')",
]
